--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "engines": {
-    "node": "12.x"
+    "node": "15.x"
   },
   "scripts": {
     "build": "tsc -p api/tsconfig.json && tsc -p web/tsconfig.json"
@@ -10,7 +10,8 @@
     "chrome-aws-lambda": "2.1.1",
     "marked": "0.8.2",
     "puppeteer-core": "2.1.1",
-    "twemoji": "12.1.5"
+    "twemoji": "12.1.5",
+    "vercel": "^21.0.1"
   },
   "devDependencies": {
     "@types/marked": "0.7.3",
